@@ -2,3 +2,5 @@ check_mk.ini
 logstate.txt
 spool
 success.log
+*.res
+*.rc
